--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <!-- A time block for each hour between 9am - 5pm -->
       <div id="hour-9" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3 hour">9AM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <textarea class="col-8 col-md-10 description" rows="3" placeholder="Enter text here!"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
@@ -41,7 +41,7 @@
 
       <div id="hour-10" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3 hour">10AM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <textarea class="col-8 col-md-10 description" rows="3" placeholder="Enter text here!"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
@@ -49,7 +49,7 @@
 
       <div id="hour-11" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3 hour">11AM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <textarea class="col-8 col-md-10 description" rows="3" placeholder="Enter text here!"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
@@ -57,7 +57,7 @@
 
       <div id="hour-12" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3 hour">12PM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <textarea class="col-8 col-md-10 description" rows="3" placeholder="Enter text here!"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
@@ -65,7 +65,7 @@
 
       <div id="hour-13" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3 hour">1PM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <textarea class="col-8 col-md-10 description" rows="3" placeholder="Enter text here!"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
@@ -73,7 +73,7 @@
 
       <div id="hour-14" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3 hour">2PM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <textarea class="col-8 col-md-10 description" rows="3" placeholder="Enter text here!"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
@@ -81,7 +81,7 @@
 
       <div id="hour-15" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3 hour">3PM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <textarea class="col-8 col-md-10 description" rows="3" placeholder="Enter text here!"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
@@ -89,7 +89,7 @@
 
       <div id="hour-16" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3 hour">4PM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <textarea class="col-8 col-md-10 description" rows="3" placeholder="Enter text here!"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
@@ -97,7 +97,7 @@
 
       <div id="hour-17" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3 hour">5PM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <textarea class="col-8 col-md-10 description" rows="3" placeholder="Enter text here!"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
