editing local storage issues with , added 'hourX' to each class in .html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
       <!-- A time block for each hour between 9am - 5pm -->
       <div id="hour-9" class="row time-block">
-        <div class="col-2 col-md-1 hour text-center py-3 hour">9AM</div>
+        <div class="col-2 col-md-1 hour text-center py-3 hour9">9AM</div>
         <textarea class="col-8 col-md-10 description" rows="3" placeholder="Enter text here!"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
@@ -40,7 +40,7 @@
       </div>
 
       <div id="hour-10" class="row time-block">
-        <div class="col-2 col-md-1 hour text-center py-3 hour">10AM</div>
+        <div class="col-2 col-md-1 hour text-center py-3 hour10">10AM</div>
         <textarea class="col-8 col-md-10 description" rows="3" placeholder="Enter text here!"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
@@ -48,7 +48,7 @@
       </div>
 
       <div id="hour-11" class="row time-block">
-        <div class="col-2 col-md-1 hour text-center py-3 hour">11AM</div>
+        <div class="col-2 col-md-1 hour text-center py-3 hour11">11AM</div>
         <textarea class="col-8 col-md-10 description" rows="3" placeholder="Enter text here!"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
@@ -56,7 +56,7 @@
       </div>
 
       <div id="hour-12" class="row time-block">
-        <div class="col-2 col-md-1 hour text-center py-3 hour">12PM</div>
+        <div class="col-2 col-md-1 hour text-center py-3 hour12">12PM</div>
         <textarea class="col-8 col-md-10 description" rows="3" placeholder="Enter text here!"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
@@ -64,7 +64,7 @@
       </div>
 
       <div id="hour-13" class="row time-block">
-        <div class="col-2 col-md-1 hour text-center py-3 hour">1PM</div>
+        <div class="col-2 col-md-1 hour text-center py-3 hour13">1PM</div>
         <textarea class="col-8 col-md-10 description" rows="3" placeholder="Enter text here!"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
@@ -72,7 +72,7 @@
       </div>
 
       <div id="hour-14" class="row time-block">
-        <div class="col-2 col-md-1 hour text-center py-3 hour">2PM</div>
+        <div class="col-2 col-md-1 hour text-center py-3 hour14">2PM</div>
         <textarea class="col-8 col-md-10 description" rows="3" placeholder="Enter text here!"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
@@ -80,7 +80,7 @@
       </div>
 
       <div id="hour-15" class="row time-block">
-        <div class="col-2 col-md-1 hour text-center py-3 hour">3PM</div>
+        <div class="col-2 col-md-1 hour text-center py-3 hour15">3PM</div>
         <textarea class="col-8 col-md-10 description" rows="3" placeholder="Enter text here!"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
@@ -88,7 +88,7 @@
       </div>
 
       <div id="hour-16" class="row time-block">
-        <div class="col-2 col-md-1 hour text-center py-3 hour">4PM</div>
+        <div class="col-2 col-md-1 hour text-center py-3 hour16">4PM</div>
         <textarea class="col-8 col-md-10 description" rows="3" placeholder="Enter text here!"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
@@ -96,7 +96,7 @@
       </div>
 
       <div id="hour-17" class="row time-block">
-        <div class="col-2 col-md-1 hour text-center py-3 hour">5PM</div>
+        <div class="col-2 col-md-1 hour text-center py-3 hour17">5PM</div>
         <textarea class="col-8 col-md-10 description" rows="3" placeholder="Enter text here!"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
